2.0.0-alpha1 (2013-??-??)
	* Added: Digest Authentication.
	* Added: Message::getHttpVersion and Message::setHttpVersion.
	* Added: Request::setRawServerArray, getRawServerValue.
	* Added: Request::createFromPHPRequest
	* Added: Response::send
	* Added: Request::getQueryParameters
	* Added: Utility for dealing with HTTP dates.
	* Added: Request::setPostData and Request::getPostData.
	* Added: Request::setAbsoluteUrl and Request::getAbsoluteUrl.
	* Removed: Response::sendBody

0.0.1-alpha (2012-10-07)
	* First version.

Project started: 2012-08-31