@@ -8,6 +8,7 @@
 	* Added: Utility for dealing with HTTP dates.
 	* Added: Request::setPostData and Request::getPostData.
 	* Added: Request::setAbsoluteUrl and Request::getAbsoluteUrl.
+	* Added: URLUtil, methods for calculation relative and base urls.
 	* Removed: Response::sendBody
 
 0.0.1-alpha (2012-10-07)
